// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert component doesnt throw when props missing 1`] = `
"<withTheme(TextComponent) style={[undefined]} format={{...}}>
  0
</withTheme(TextComponent)>"
`;

exports[`convert component renders correctly 1`] = `
"<withTheme(TextComponent) style={[undefined]} format={{...}}>
  3130905.3427246177
</withTheme(TextComponent)>"
`;
